end desktop stretch items fixed

--- a/assets/styles/pagecontent.css
+++ b/assets/styles/pagecontent.css
@@ -42,7 +42,7 @@ ul {
     padding: 0;
     margin: 0;
 }
-.listitem {
+.menupart ul li {
     background-color: #FFFFFF33;
     border-radius: 12px;
     padding: 4px 5px 4px 10px;
@@ -143,7 +143,7 @@ ul {
     }
     .wrapper {
         width: 800px;
-        margin: 70 auto;
+        margin: 70px auto;
     }
     h1 {
         margin-bottom: 12px;
@@ -151,6 +151,7 @@ ul {
     }
     .menupart ul {
         display: flex;
+        justify-content: space-between;
         flex-wrap: wrap;
         border-top: solid 1px var(--title-red);
         margin: 0 -6px 24px -6px;
@@ -158,15 +159,10 @@ ul {
 
     }
     .menupart ul li {
-        width: 50%;
-        padding: 0 6px;
-        margin: 0;
-        
-    }
-    .listitem {
+        width: 48%;
+        margin: 6px;
         flex-direction: column;
         padding: 12px;
-
     }
     .itemimage {
         width: 100%;
